src/styles.scss
:root {
    --header-height: 92px;
    --header-height-mobile: 60px;
    --burger-menu-footer-height: 370px;
    --burger-menu-footer-height-mobile: 275px;

    --cream: #fffcf3;
    --orange: #ff9900;
    --red: #e61c40;

    // Scrollbar Firefox //

    scrollbar-color: var(--orange) rgba(46, 54, 69, 0) !important;
    scrollbar-width: thin !important;
}

* {
    margin: 0;
    box-sizing: border-box;
}

html,
body {
    background-color: var(--cream);
    background-position: center;
    overflow-y: overlay;
    overflow-x: hidden;
}

h1,
h2,
h3,
h4 {
    font-family: Syne, Helvetica, sans-serif;
    line-height: 100%;
    font-weight: 800;
    letter-spacing: 0.01em;
    transition: 125ms;
}

h2 {
    font-size: clamp(28px, 8vw, 78px);
    transition: 125ms;
    cursor: default;
}

span {
    font-family: Overpass, Helvetica, sans-serif;
    font-weight: 400;
    line-height: 120%;
}

.d-none {
    display: none !important;
}

.hidden {
    visibility: hidden;
}

.visable {
    visibility: visible;
}

.preventScrolling {
    overflow: hidden;
}

.button {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 200px;
    align-self: center;
    font-family: Overpass, Helvetica, sans-serif;
    font-size: 23px;
    font-weight: 400;
    line-height: 120%;
    color: black;
    text-decoration: none;
    border: 4px solid #000000;
    padding: 15px 40px 13px 40px;
    transition: 125ms ease-in-out;
    white-space: nowrap;
    user-select: none;
    cursor: pointer;

    &:active {
        background-color: black;
        color: var(--cream) !important;
        transition: ease-out;
    }
}

// Scrollbar //

::-webkit-scrollbar-corner {
    background: transparent;
}

::-webkit-scrollbar {
    background-color: var(--cream);
    width: 16px;
}

::-webkit-scrollbar-track {
    background-color: var(--cream);
}

::-webkit-scrollbar-thumb {
    background-color: #ffba53;
    border-radius: 16px;
    border: 4px solid var(--cream);
}

::-webkit-scrollbar-thumb:hover {
    background: var(--orange);
}

::-webkit-scrollbar-button {
    display: none;
}

.hideScrollbar::-webkit-scrollbar {
    -ms-overflow-style: none; /* Internet Explorer 10+ */
    scrollbar-width: none; /* Firefox */
    display: none; /* Safari and Chrome */
}

.showScrollbarSafari::-webkit-scrollbar {
    display: unset !important;
}

.test{
    background-color: red;

}

::selection {
    background: var(--orange);
}
::-moz-selection {
    background: var(--orange);
}

@media only screen and (max-width: 600px) {
    .button {
        font-size: 20px;
        font-weight: 400 !important;
    }
}

@media only screen and (hover: hover) and (pointer: fine) {
    .button {
        &:hover {
            padding: 15px 60px 13px 60px;
            font-weight: bold;
        }
    }
    h2 {
        &:hover {
            color: var(--orange);
        }
    }
}

